--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,10 @@ jobs:
       - run:
           name: Building and packaging application
           command: |
-            docker build -t $DC_USERNAME/invoicemanager -t $DC_USERNAME/invoicemanager:$APP_VERSION .
+            docker build -t $DC_USERNAME/invoicemanager .
             docker login -u $DC_USERNAME -p $DC_PASS
             docker images
-            docker push $DC_USERNAME/invoicemanager:latest  
-            docker push $DC_USERNAME/invoicemanager:$APP_VERSION
+            docker push $DC_USERNAME/invoicemanager:latest 
 
   deploy:
     docker:
