--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,12 @@ jobs:
       - run:
           name: Building and packaging application 
           command: |
-            docker build -t $DC_USERNAME/invoicemanager .
+            APP_VERSION=$(echo $(date +%s))
+            docker build -t $DC_USERNAME/invoicemanager -t $DC_USERNAME/invoicemanager:$APP_VERSION .
             docker login -u $DC_USERNAME -p $DC_PASS
             docker images
-            docker push $DC_USERNAME/invoicemanager:latest 
+            docker push $DC_USERNAME/invoicemanager:latest
+            docker push $DC_USERNAME/invoicemanager:$APP_VERSION
 
   deploy:
     docker:
